# crypto-mcp

./: .gitignore  README.md  package-lock.json  pyproject.toml
followin_mcp/: __init__.py  dev.py
followin_mcp/acp/: __init__.py  server.py
followin_mcp/core/: __init__.py  adapters.py  clustering.py  digest.py  event_types.py  models.py  normalizer.py  ranking.py  semantic_recall.py  service.py  taxonomy_rules.py
followin_mcp/demo/: __init__.py  agent.py  mcp_client.py  webapp.py
followin_mcp/mcp/: __init__.py  server.py
scripts/: debug_recommendation.py  discover_alias_candidates.py  export_promoted_aliases.py  promote_alias_candidates.py  run_candidate_pipeline.sh  start_dev.sh
web/: index.html
